# Basic

./: CMakeLists.txt  README.md  main.cpp
algo/: demo1.cpp  demo2.c  demo3.c
cherno/p1_p25/: demo1.cpp  demo5.cpp  log.cpp
cherno/p1_p25/headers/: log.h
demo1/: 02_variable.cpp  04_data_structure.cpp  06_operators.cpp  07_process_control.cpp  08_array.cpp  10_finction_with_file.cpp  11_pointer.cpp  12_struct.cpp
itheima/p167_p236/: 01_template_func.cpp  02_person.cpp  02_template_example.cpp  08_stack_queue_list.cpp
itheima/p167_p236/headers/: person.h
itheima/p167_p236/test/: temp.cpp
itheima/p1_p83/: 01_keywords.cpp  10_function_with_file.cpp
itheima/p1_p83/headers/: 10_function_with_file.h
itheima/p237_p314/: 01_function_object.cpp  02_algorithm.cpp
itheima/p237_p314/computer_reservation/: ComputerOrder.cpp  Manager.cpp  Student.cpp  Teacher.cpp
itheima/p237_p314/computer_reservation/headers/: Identity.h  Manager.h  Student.h  Teacher.h  globalFile.h
itheima/p237_p314/headers/: function.hpp
itheima/p237_p314/speech_system/: Speaker.cpp  speech.csv  speechManager.cpp  speechManagerMain.cpp
itheima/p237_p314/speech_system/headers/: speechManager.h
itheima/p84_p166/: 02_function_enhance.cpp  05_this_pointer.cpp  07_operators_reload.cpp  08_extends.cpp  09_polymorphic.cpp  10_file.cpp
itheima/p84_p166/worker_manager/: boss.cpp  employee.cpp  employee_management.cpp  manager.cpp  worker_manager.cpp
itheima/p84_p166/worker_manager/headers/: WorkerManager.h  manager.h  worker.h
itheima/temp/: temp.txt  temp2.cpp  temp4.cpp  temp5.cpp  temp6.cpp  temp7.cpp  temp8.cpp
itheima/temp/headers/: demo.h  person.hpp
p167/: 02_template_class.cpp  03_stl.cpp  04_string.cpp  05_vector.cpp  06_deque.cpp  07_example.cpp  08_stack_queue_list.cpp  09_set_map.cpp  temp.cpp
p167/headers/: myArray.hpp  person.hpp
p167/test/: temp2.cpp
p167_p236/: 06_deque.cpp  09_set_map.cpp
p1_p71/: 04_data_structure.cpp  10_finction_with_file.cpp  12_struct.cpp
p1_p72/: 04_data_structure.cpp  05_input.cpp  09_function.cpp  temp.cpp
p1_p83/: 03_const.cpp  04_data_structure.cpp  11_pointer.cpp  13_address_manager.cpp
p237_p314/: 01_function_object.cpp
p84/: 01_memory_mode.cpp  03_object.cpp  04_object_2.cpp  05_this_pointer.cpp  06_friend.cpp  07_operators_reload.cpp  08_extends.cpp  09_polymorphic.cpp  10_file.cpp  temp.cpp
p84/header/: circle.h
p84_p166/: 03_object.cpp
p84_p166/headers/: point.h
p84_p166/worker_manager/: employee_management.cpp  test.cpp  worker_manager.cpp
p84_p166/worker_manager/headers/: WorkerManager.h  boss.h  employee.h  workManagement.h
temp/: temp1.cpp  temp2.cpp  temp3.cpp  temp4.cpp  temp5.cpp
tools/math/: 0.618.cpp  demo1.cpp  demo2.cpp  test.cpp
tools/trick/: 01_lambda.cpp
